<resources>
    <string name="app_name">Sinchan</string>

    <string name="title_activity_title_screen">TitleScreen</string>
    <string name="Sinchan">Sinchan</string>
    <string name="title_activity_log_in">LogIn</string>

    <string name="action_settings">Settings</string>
    <string name="StudentLogin">Login as Student</string>
    <string name="FacultyLogin">Login as Faculty</string>
    <string name="Login">Log In</string>
    <string name="title_activity_student_login">StudentLogin</string>

    <string name="hello_world">Hello world!</string>
    <string name="WelcomeStudent">Welcome Student..</string>
    <string name="Name">Name</string>
    <string name="Password">Password</string>
    <string name="title_activity_faculty_login">FacultyLogin</string>
    <string name="WelcomeProfessor">Welcome Professsor...</string>
    <string name="Description">A Complete Review Application</string>
    <string name="CopyrightDescription">Developed by Meghajit Mazumdar, PESIT-BSC</string>
    <string name="LoginButton">LogIn</string>
    <string name="title_activity_student_details">StudentDetails</string>
    <string name="CourseName">Course</string>
    <string name="ReviewStatus">Review Status</string>
    <string name="Options">Option</string>
</resources>
